Usando WebService SOAP com primeiro exemplo

--- a/AppCEP/AppCEP/AppCEP.csproj
+++ b/AppCEP/AppCEP/AppCEP.csproj
@@ -28,7 +28,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Class\" />
     <Folder Include="Connected Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="App.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+    <None Update="Pages\PrincipalPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
   </ItemGroup>
 </Project>
